--- a/entorno.njk
+++ b/entorno.njk
@@ -35,7 +35,11 @@ permalink: "/entorno/"
   </div>
 
   <figure class="card map-card">
-    <img src="/images/ribera-navarra.png" alt="Mapa de la Ribera de Navarra" class="map-ribera" loading="lazy" decoding="async">
+    <a class="lb" href="/images/ribera-navarra.png"
+      data-caption="Mapa de la Ribera de Navarra">
+      <img src="/images/ribera-navarra.png" alt="Mapa de la Ribera de Navarra"
+          class="map-ribera" loading="lazy" decoding="async">
+    </a>
   </figure>
 </section>
 
