Cambios espero que finales

--- a/entorno.njk
+++ b/entorno.njk
@@ -35,8 +35,7 @@ permalink: "/entorno/"
   </div>
 
   <figure class="card map-card">
-    <a class="lb" href="/images/ribera-navarra.png"
-      data-caption="Mapa de la Ribera de Navarra">
+    <a class="lb" href="/images/ribera-navarra.png" data-caption="Mapa de la Ribera de Navarra">
       <img src="/images/ribera-navarra.png" alt="Mapa de la Ribera de Navarra"
           class="map-ribera" loading="lazy" decoding="async">
     </a>
